--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,9 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-size: 16px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
 @keyframes logo-spin {
   from {
@@ -32,10 +22,12 @@
   }
 }
 
-.card {
-  padding: 2em;
+.form-item {
+  display: flex;
+  gap: 8px;
 }
 
-.read-the-docs {
-  color: #888;
+.sub-label {
+  font-size: 14px;
+  color: #666;
 }
