--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   font-size: 16px;
 }
 
+input, select, button {
+  font-size: 16px;
+}
+
 
 @keyframes logo-spin {
   from {
@@ -32,4 +36,17 @@
 .sub-label {
   font-size: 14px;
   color: #999;
+}
+
+.logo {
+  height: 16px;
+}
+
+.footer {
+  margin-top: 40px;
+}
+
+.countDownText {
+  font-size: 32px;
+  font-weight: 500;
 }
