--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
   font-size: 16px;
 }
 
@@ -49,4 +48,21 @@ input, select, button {
 .countDownText {
   font-size: 32px;
   font-weight: 500;
+}
+
+.navbar {
+  display: flex;
+  gap: 8px;
+}
+
+.main-content {
+  margin-block-start: 24px;
+  border-block-start: 1px solid #383838;
+  padding-block-start: 24px;
+}
+
+.quick-options {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
 }
