--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ input, select, button {
   font-size: 16px;
 }
 
-
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
@@ -29,6 +28,11 @@ input, select, button {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
   }
+}
+
+.App {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .form-item {
